add route to delete session on logout, use bootstrap fpr landing page

--- a/web_dynamic/pages/templates/login.html
+++ b/web_dynamic/pages/templates/login.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>place holder</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="../statics/styles/login.css" />
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/login.js"></script>
@@ -106,11 +107,68 @@
                     </form>
                 </div>
                 <!--About-->
+                <div class="row mt-5">
+                    <div class="col-md card m-2 p-3">
+                        <h2>Create courses by semester</h2>
+                        <p>each course can be created for for each semester and each year for up to year 5</p>
+                    </div>
+                    <div class="col-md card m-2 p-3">
+                        <h2>Record grade for each course by semester</h2>
+                        <p>Nigerian university grading system is used to calculate and store grades for each semester and year</p>
+                    </div>
+                    <div class="col-md card m-2 p-3">
+                        <h2>Never forget an event</h2>
+                        <p>add events to your time table so that you never miss an event</p>
+                    </div>
+                </div> 
 
                 <!--contact-->
+                <div class="row bg-white my-5 rounded p-3">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-9">
+                        <h2>About dev</h2>
+                        <p>Hi there, my name is Omogware Reinhard, i am a junior fullstack developer with a strong afinity towards back end development.
+                            this project was built as my portfolio project, it was a project built to solve a need i was facing, which was having
+                            a smart and efficient way of keeping track of my grades and planning events. i hope others can also find this helpful.
+                        </p>
+                    </div>
+                </div>
             </section>
 
         </div>
+        <footer class="bg-dark text-center text-white">
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+              <!-- Section: Social media -->
+              <section class="mb-4">
+          
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/Reinhard_uno?t=JKVPv3ID0Cj9LiqtgkmH-g&s=09" role="button"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+          
+          
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/reinhard-omogware-2938a9240" role="button"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+          
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/reinhardcode/SchoolHub" role="button"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </section>
+              <!-- Section: Social media -->
+            </div>
+            <!-- Grid container -->
+          
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+              © 2023 Copyright:
+              <a class="text-white" href="#">SchoolHub</a>
+            </div>
+            <!-- Copyright -->
+          </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
