--- a/web_dynamic/pages/templates/settings.html
+++ b/web_dynamic/pages/templates/settings.html
@@ -78,7 +78,7 @@
                         
                     </div>-->
                     <div class="logout">
-                        <a href="{{ url_for('page_views.index') }}"><button>Logout</button></a>
+                        <a href="{{ url_for('page_views.logout') }}"><button>Logout</button></a>
                     </div>
                 </div>
                 
