--- a/web_dynamic/pages/statics/styles/login.css
+++ b/web_dynamic/pages/statics/styles/login.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(../images/cover_image.jpg);
+    background-size: 1920p 1080p;
+    background-repeat: no-repeat;
 }
 
 /* Full-width input fields */
