added viewport to add to site responsiveness

--- a/web_dynamic/pages/templates/login.html
+++ b/web_dynamic/pages/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
         <title>place holder</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="../statics/styles/login.css" />
@@ -108,15 +109,15 @@
                 </div>
                 <!--About-->
                 <div class="row mt-5">
-                    <div class="col-md card m-2 p-3">
+                    <div class="col-lg card m-2 p-3">
                         <h2>Create courses by semester</h2>
                         <p>each course can be created for for each semester and each year for up to year 5</p>
                     </div>
-                    <div class="col-md card m-2 p-3">
+                    <div class="col-lg card m-2 p-3">
                         <h2>Record grade for each course by semester</h2>
                         <p>Nigerian university grading system is used to calculate and store grades for each semester and year</p>
                     </div>
-                    <div class="col-md card m-2 p-3">
+                    <div class="col-lg card m-2 p-3">
                         <h2>Never forget an event</h2>
                         <p>add events to your time table so that you never miss an event</p>
                     </div>
