--- a/web_dynamic/pages/templates/settings.html
+++ b/web_dynamic/pages/templates/settings.html
@@ -27,7 +27,7 @@
                 <!--fill  this part-->
                 <img src="../statics/images/Untitled design.png" class="user_image">
                 <div class="info_wrapper">
-                    <div id="username">Reinhard</div>
+                    <div id="username">&nbsp;</div>
                     <div class="school_details">
                         <div class="dropdown_semester">
                             <select id="dropdown1" name="dropdown1">
