add clear function, favicon and clean console.log

--- a/web_dynamic/pages/statics/styles/login.css
+++ b/web_dynamic/pages/statics/styles/login.css
@@ -206,7 +206,7 @@ span.psw {
     width: 100px;
 }
 
-#hide_str, .hide_str {
+.hide_str {
     color: #f44336;
     display: none;
     font-size: small;
