--- a/web_dynamic/pages/templates/events.html
+++ b/web_dynamic/pages/templates/events.html
@@ -12,7 +12,8 @@
         <script src="../statics/scripts/events.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
 
-        <title></title>
+        <title>events</title>
+        <link rel="icon" type="image/x-icon" href="../statics/images/favicon.ico">
     </head>
     <body>
         <header>
@@ -120,6 +121,7 @@
                             </select><br><br>
                     
                             <button type="submit">Submit</button>
+                            <button type="button" id="clear_event">Clear</button>
                             <button type="reset" class="cancelbtn">Cancel</button>
                         </form>
                     </div>
