--- a/web_dynamic/pages/templates/grades.html
+++ b/web_dynamic/pages/templates/grades.html
@@ -11,7 +11,8 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/grades.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
-        <title></title>
+        <title>grades</title>
+        <link rel="icon" type="image/x-icon" href="../statics/images/favicon.ico">
     </head>
     <body>
         <header>
