--- a/web_dynamic/pages/templates/index.html
+++ b/web_dynamic/pages/templates/index.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" type="text/css" href="../statics/styles/home.css"/>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
-        <title></title>
+        <title>Home</title>
+        <link rel="icon" type="image/x-icon" href="../statics/images/favicon.ico">
     </head>
     <body>
         <header>
