--- a/web_dynamic/pages/templates/settings.html
+++ b/web_dynamic/pages/templates/settings.html
@@ -11,7 +11,8 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/settings.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
-        <title></title>
+        <title>settings</title>
+        <link rel="icon" type="image/x-icon" href="../statics/images/favicon.ico">
     </head>
     <body>
         <header>
@@ -63,7 +64,7 @@
                             <div><h3>Add/Edit Course</h3></div>
 
                             <label for="cname"><b>Course Name*</b></label>
-                            <input type="text" placeholder="Enter Course name" name="cname" maxlength="9" id="course_name" required>
+                            <div><input type="text" placeholder="Enter Course name" name="cname" maxlength="9" id="course_name" required></div>
 
                             <label for="desc"><b>Discription</b></label><br>
                             <!--<input type="text" placeholder="Enter description" name="desc">-->
