--- a/web_dynamic/pages/templates/grades.html
+++ b/web_dynamic/pages/templates/grades.html
@@ -61,7 +61,20 @@
                 </div>
                 <div class="grade_point">
                     <div class="grades_title">Grade point</div>
-                    <div id="coming_soon">Coming soon</div>
+                    <table class="coming_soon">
+                        <tr>
+                            <td>Courses used</td>
+                            <td class="c_u">NA</td>
+                        </tr>
+                        <tr>
+                            <td>Total credit</td>
+                            <td class="t_c">NA</td>
+                        </tr>
+                        <tr>
+                            <td>GPA</td>
+                            <td class="gpa">NA</td>
+                        </tr>
+                    </table>
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
