added route for random quotes

--- a/web_dynamic/pages/templates/index.html
+++ b/web_dynamic/pages/templates/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="../statics/styles/home.css"/>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
+        <script src="../statics/scripts/home.js"></script>
         <title>Home</title>
         <link rel="icon" type="image/x-icon" href="../statics/images/favicon.ico">
     </head>
@@ -28,9 +29,9 @@
                     <img  src="../statics/images/schoohub.jpg" alt="school" class="school_image">
                 </div>
                 <div class="quote_header">Daily Nugget</div>
-                <div class="quote"><q>
-                    Your hard work today is your ticket to success tomorrow. Don't let the temporary pleasure of procrastination overshadow the long-term satisfaction of achievement. Keep your focus, stay disciplined, and push through the challenges. Your dedication will pay off in ways you never imagined. Believe in yourself, trust the process, and let your academic excellence be the foundation of your future success. You have the power to shape your destiny, so study hard, aim high, and make your dreams a reality.
-                </q></div>
+                <div class="quote"><q class="quote_text">
+                </q><br>
+                 --<span class="author"></span></div>
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
