--- a/web_dynamic/pages/templates/events.html
+++ b/web_dynamic/pages/templates/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../statics/styles/header.css"/>
         <link rel="stylesheet" type="text/css" href="../statics/styles/side_panel.css"/>
         <link rel="stylesheet" type="text/css" href="../statics/styles/footer.css"/>
@@ -28,68 +28,70 @@
         <div class="midle_container">
             <section class="page-content">
                 <!--fill  this part-->
-                <table class="grades_table">
-                    <tr>
-                      <th>Time</th>
-                      <th>MON</th>
-                      <th>TUE</th>
-                      <th>WED</th>
-                      <th>THU</th>
-                      <th>FRI</th>
-                      <th>SAT</th>
-                      <th>SUN</th>
-                    </tr>
-                    <tr>
-                      <td>8 - 10</td>
-                      <td id="MON_8-10"></td>
-                      <td id="TUE_8-10">Eng 100</td>
-                      <td id="WED_8-10"></td>
-                      <td id="THU_8-10"></td>
-                      <td id="FRI_8-10"></td>
-                      <td id="SAT_8-10"></td>
-                      <td id="SUN_8-10"></td>
-                    </tr>
-                    <tr>
-                      <td>10 -12</td>
-                      <td id="MON_10-12"></td>
-                      <td id="TUE_10-12"></td>
-                      <td id="WED_10-12"></td>
-                      <td id="THU_10-12"></td>
-                      <td id="FRI_10-12"></td>
-                      <td id="SAT_10-12"></td>
-                      <td id="SUN_10-12"></td>
-                    </tr>
-                    <tr>
-                        <td>12 -14</td>
-                        <td id="MON_12-14"></td>
-                        <td id="TUE_12-14"></td>
-                        <td id="WED_12-14"></td>
-                        <td id="THU_12-14"></td>
-                        <td id="FRI_12-14"></td>
-                        <td id="SAT_12-14"></td>
-                        <td id="SUN_12-14"></td>
-                      </tr>
-                      <tr>
-                        <td>14 -16</td>
-                        <td id="MON_14-16"></td>
-                        <td id="TUE_14-16"></td>
-                        <td id="WED_14-16"></td>
-                        <td id="THU_14-16"></td>
-                        <td id="FRI_14-16"></td>
-                        <td id="SAT_14-16"></td>
-                        <td id="SUN_14-16"></td>
-                      </tr>
-                      <tr>
-                        <td>16 -18</td>
-                        <td id="MON_16-18"></td>
-                        <td id="TUE_16-18"></td>
-                        <td id="WED_16-18"></td>
-                        <td id="THU_16-18"></td>
-                        <td id="FRI_16-18"></td>
-                        <td id="SAT_16-18"></td>
-                        <td id="SUN_16-18"></td>
-                      </tr>
-                  </table>
+                <div class="table_container">
+                    <table class="grades_table">
+                        <tr>
+                        <th>Time</th>
+                        <th>MON</th>
+                        <th>TUE</th>
+                        <th>WED</th>
+                        <th>THU</th>
+                        <th>FRI</th>
+                        <th>SAT</th>
+                        <th>SUN</th>
+                        </tr>
+                        <tr>
+                        <td>8 - 10</td>
+                        <td id="MON_8-10"></td>
+                        <td id="TUE_8-10">Eng 100</td>
+                        <td id="WED_8-10"></td>
+                        <td id="THU_8-10"></td>
+                        <td id="FRI_8-10"></td>
+                        <td id="SAT_8-10"></td>
+                        <td id="SUN_8-10"></td>
+                        </tr>
+                        <tr>
+                        <td>10 -12</td>
+                        <td id="MON_10-12"></td>
+                        <td id="TUE_10-12"></td>
+                        <td id="WED_10-12"></td>
+                        <td id="THU_10-12"></td>
+                        <td id="FRI_10-12"></td>
+                        <td id="SAT_10-12"></td>
+                        <td id="SUN_10-12"></td>
+                        </tr>
+                        <tr>
+                            <td>12 -14</td>
+                            <td id="MON_12-14"></td>
+                            <td id="TUE_12-14"></td>
+                            <td id="WED_12-14"></td>
+                            <td id="THU_12-14"></td>
+                            <td id="FRI_12-14"></td>
+                            <td id="SAT_12-14"></td>
+                            <td id="SUN_12-14"></td>
+                        </tr>
+                        <tr>
+                            <td>14 -16</td>
+                            <td id="MON_14-16"></td>
+                            <td id="TUE_14-16"></td>
+                            <td id="WED_14-16"></td>
+                            <td id="THU_14-16"></td>
+                            <td id="FRI_14-16"></td>
+                            <td id="SAT_14-16"></td>
+                            <td id="SUN_14-16"></td>
+                        </tr>
+                        <tr>
+                            <td>16 -18</td>
+                            <td id="MON_16-18"></td>
+                            <td id="TUE_16-18"></td>
+                            <td id="WED_16-18"></td>
+                            <td id="THU_16-18"></td>
+                            <td id="FRI_16-18"></td>
+                            <td id="SAT_16-18"></td>
+                            <td id="SUN_16-18"></td>
+                        </tr>
+                    </table>
+                </div>
                   <div class="edit_class">
                     <button class="edit_button">Edit/Add</button>
                     
