--- a/web_dynamic/pages/templates/index.html
+++ b/web_dynamic/pages/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../statics/styles/header.css"/>
+        <link rel="stylesheet" type="text/css" href="../statics/styles/home.css"/>
         <link rel="stylesheet" type="text/css" href="../statics/styles/side_panel.css"/>
         <link rel="stylesheet" type="text/css" href="../statics/styles/footer.css"/>
-        <link rel="stylesheet" type="text/css" href="../statics/styles/home.css"/>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="../statics/scripts/side_panel.js"></script>
         <script src="../statics/scripts/home.js"></script>
