--- a/web_dynamic/pages/statics/styles/side_panel.css
+++ b/web_dynamic/pages/statics/styles/side_panel.css
@@ -1,10 +1,7 @@
 .side-panel {
-    position: fixed;
-    right: 0px;
-    top: 59px;
-    bottom: 40px;
-    border-left: 1.5px solid #C0B6B6;
-    width: 35%;
+    position: static;
+    border-left: none;
+    width: 100%;
     margin-bottom: 60px;
 }
 
@@ -49,9 +46,14 @@
 }
 
 /* Change styles for side_panel on extra small screens */
-@media screen and (max-width: 600px) {
+@media only screen and (min-width: 700px) {
     .side-panel {
-        position: static;
-        border-left: none;
-    }
+        position: absolute;
+        right: 0px;
+        top: 59px;
+        bottom: 40px;
+        border-left: 1.5px solid #C0B6B6;
+        width: 35%;
+        margin-bottom: 60px;
+    } 
   }
